--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-    "dev": "vite",
+    "dev:front": "vite",
+    "start" : "npm build && npm server:prod",
     "build": "vite build",
     "server:dev": "nodemon server.js",
     "server:prod": "node server.js",
