--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "dev:front": "vite",
-    "start" : "npm build && npm server:prod",
+    "start" : "npm run build && npm server:prod",
     "build": "vite build",
     "server:dev": "nodemon server.js",
     "server:prod": "node server.js",
